--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "format": "prettier --write \"src/**/*.js\""
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,8 @@
     "gradient-string": "^2.0.1",
     "inquirer": "^9.0.0",
     "nanospinner": "^1.1.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1"
   }
 }
