--- a/.github/worfklows/cli-quiz-game-develop.yml
+++ b/.github/worfklows/cli-quiz-game-develop.yml
@@ -33,4 +33,4 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git diff-index --quiet HEAD || (git commit -a -m'[Bot] Update: Apply prettier formatter' && git push -f) || echo "No changes to commit"
+          git diff-index --quiet HEAD || (git commit -a -m'[Bot] Update: Apply Changes' && git push -f) || echo "No changes to commit"
