--- a/.github/workflows/cli-quiz-game-develop.yml
+++ b/.github/workflows/cli-quiz-game-develop.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run Prettier
         run: |
           npm run format
-      - name: Save Changes
+      - name: Save Change
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
