update: modify job

--- a/.github/workflows/cli-quiz-game-develop.yml
+++ b/.github/workflows/cli-quiz-game-develop.yml
@@ -11,8 +11,7 @@ permissions:
   checks: write
   contents: write
 jobs:
-  clean:
-    name: clean
+  build:
     runs-on: ${{ matrix.os }}
     needs: build
     strategy:
