update: remove dependency

--- a/.github/workflows/cli-quiz-game-develop.yml
+++ b/.github/workflows/cli-quiz-game-develop.yml
@@ -11,9 +11,8 @@ permissions:
   checks: write
   contents: write
 jobs:
-  build:
+  clean:
     runs-on: ${{ matrix.os }}
-    needs: build
     strategy:
       matrix:
         os: [ubuntu-18.04]
