Test Again Workflows (#7)
* Test Again Workflows

* update: modify job

* update: remove dependency

* [Bot] Update: Apply Changes

* update: feature/test-again-workflows

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/cli-quiz-game-develop.yml
+++ b/.github/workflows/cli-quiz-game-develop.yml
@@ -13,7 +13,6 @@ permissions:
 jobs:
   clean:
     runs-on: ${{ matrix.os }}
-    needs: build
     strategy:
       matrix:
         os: [ubuntu-18.04]
@@ -33,4 +32,4 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git diff-index --quiet HEAD || (git commit -a -m'[Bot] Update: Apply Changes' && git push -f) || echo "No changes to commit"
+          git diff-index --quiet HEAD || (git commit -a -m'[Bot] update: apply changes' && git push -f) || echo "No changes to commit"
