--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "author": "Kent Louise G. Tonino",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^18.11.6",
     "chalk": "^5.0.1",
     "chalk-animation": "^2.0.2",
     "figlet": "^1.5.2",
     "gradient-string": "^2.0.1",
     "inquirer": "^9.0.0",
-    "nanospinner": "^1.1.0"
-  },
-  "devDependencies": {
-    "prettier": "^2.7.1"
+    "nanospinner": "^1.1.0",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
