--- a/.github/workflows/cli-quiz-game-develop.yml
+++ b/.github/workflows/cli-quiz-game-develop.yml
@@ -24,7 +24,7 @@ jobs:
           ref: ${{ github.head_ref }}
       - name: Install Dependencies
         run: |
-          npm install
+          npm ci
       - name: Run Prettier
         run: |
           npm run format
