--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
   "name": "quiz-game",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "format": "prettier --write \"src/**/*.js\""
-  },
-  "keywords": [],
-  "author": "Kent Louise G. Tonino",
+  "author": "Kent Louise Tonino",
   "license": "ISC",
+  "scripts": {
+    "build": "tsc --build",
+    "start": "node ./dist/index.js",
+    "format": "prettier --write \"src/**/*.ts\""
+  },
   "dependencies": {
+    "@types/chalk-animation": "^1.6.1",
+    "@types/figlet": "^1.5.5",
+    "@types/gradient-string": "^1.1.2",
+    "@types/inquirer": "^9.0.2",
+    "@types/nodemon": "^1.19.2",
     "chalk": "^5.0.1",
     "chalk-animation": "^2.0.2",
     "figlet": "^1.5.2",
     "gradient-string": "^2.0.1",
     "inquirer": "^9.0.0",
-    "nanospinner": "^1.1.0"
-  },
-  "devDependencies": {
-    "prettier": "^2.7.1"
+    "nanospinner": "^1.1.0",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
