--- a/.github/workflows/cli-quiz-game-develop.yml
+++ b/.github/workflows/cli-quiz-game-develop.yml
@@ -19,12 +19,12 @@ jobs:
         node: [16]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
       - name: Install Dependencies
         run: |
-          npm install
+          npm ci
       - name: Run Prettier
         run: |
           npm run format
