--- a/.github/workflows/cli-quiz-game-develop.yml
+++ b/.github/workflows/cli-quiz-game-develop.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04]
-        node: [16]
+        os: [ubuntu-latest]
+        node: [18]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
