--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "scripts": {
     "start": "tsc --build && node ./dist/app.js",
-    "format": "prettier --write \"src/**/*.{yml,ts,prettierrc,json}\""
+    "format": "prettier --write \"./**/*.{yml,ts,prettierrc,json,js}\""
   },
   "dependencies": {
     "@types/chalk-animation": "^1.6.1",
