--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "trailingComma": "all",
   "endOfLine": "auto",
   "printWidth": 80,
-  "semi": false,
+  "semi": true,
   "tabWidth": 2,
   "arrowParens": "always"
 }
