update: change the name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cli-quiz-game",
+  "name": "quiz-game",
   "version": "1.0.0",
   "type": "module",
   "author": "Kent Louise Tonino",
